# supaero2025

./: .pre-commit-config.yaml  0-introduction_to_numerical_robotics.ipynb  0_introduction_to_numerical_robotics.ipynb  1-forward_geom.ipynb  1_forward_geom.ipynb  2-inv_geom.ipynb  3-invkine.ipynb  3_invkine.ipynb  4-dynamics.ipynb  4-simu.ipynb  4_dynamics.ipynb  5-1_controlopt_intro.ipynb  5-2_controlopt.ipynb  5-2_controlopt_multibody.ipynb  5_1_controlopt_intro.ipynb  5_2_controlopt.ipynb  6_locomotion.ipynb  6_rl_intro.ipynb  Dockerfile  README.md  appendix-proxqp.ipynb  appendix-quaternions.ipynb  appendix-scipy_optimizers.ipynb  pyproject.toml  requirements.txt
.github/workflows/: gepetuto_test.yml
appendix/: solution_slerp.py
examples/: display_robot.py
next/: 1-forward_geom.ipynb  2-inv_geom.ipynb  3-invkine.ipynb  4-dynamics.ipynb  4-simu.ipynb  5-1_controlopt_intro.ipynb  5-2_controlopt.ipynb  5-2_controlopt_multibody.ipynb  6-reinforcement_learning.ipynb  appendix-proxqp.ipynb  appendix-quaternions.ipynb
next/appendix/: solution_lerp.py  (+1 more)
supaero2023/: load_ur5_parallel.py  tests.py
supaero2024/: __init__.py  hppfcl_utils.py  load_ur5_parallel.py  tests.py
supaero2025/: hppfcl_utils.py  load_ur5_parallel.py  load_ur5_with_obstacles.py  tests.py
tp0/: simple_path_planning.py
tp1/: configuration_extended.py  configuration_reduced.py
tp2/: floating.py  invgeom3d.py  invgeom6d.py  parallel_robots.py  simple_pick_and_place.py
tp3/: control_head.py  inverse_kinematics.py  tiago_loader.py
tp4/: README.md  collision_wrapper.py  compatibility.py  create_rigid_contact_models_for_hppfcl.py  display_collision_patches.py  display_witness.py  example_control.py  example_display_collision_patches.py  example_display_witness.py  example_find_collisions.py  example_proxqp.py  example_separate_objects.py  example_simu_frictionless.py  robot_hand.py  scenes.py  solution_pd.py  test_compatibility.py
tp5/: arm_example.py  bicopter_toward_origin.py  bicopter_toward_origin_with_constraints.py  bicopter_utils.py  panda_reaches_a_single_target.py  panda_reaches_with_constraints.py  unicycle_toward_origin.py
tp6/: ddpg.py  deeptable.py  dqn.py  myenvs.py  qlearn.py  qtable.py
utils/: load_ur5_parallel.py
(+39 files in other folders)
