[tool.poetry]
name = "supaero2024"
version = "0.1.0"
description = "Gepetto tutorials, for Pinocchio and Crocoddyl, version for Supaero 2024 class"
authors = [
  "Guilhem Saurel <guilhem.saurel@laas.fr>",
  "Nicolas Mansard <nmansard@laas.fr>",
  "Théo Martinez <tmartinezf@laas.fr>"
]
homepage = "https://github.com/Gepetto/supaero2024"
license = "BSD-3-Clause"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9, <3.11"
gepetuto = "^1.2.0"
crocoddyl = "^2.0.1"
matplotlib = "^3.7.2"
meshcat = "^0.3.2"
quadprog = "^0.1.11"
scipy = "^1.10.1"
tensorflow = "^2.13.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
