[tool.poetry]
name = "supaero2024"
version = "0.1.0"
description = "Gepetto tutorials, for Pinocchio and Crocoddyl, version for Supaero 2024 class"
authors = [
  "Guilhem Saurel <guilhem.saurel@laas.fr>",
  "Nicolas Mansard <nmansard@laas.fr>",
  "Théo Martinez <tmartinezf@laas.fr>"
]
homepage = "https://github.com/Gepetto/supaero2024"
license = "BSD-2-Clause"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9, <3.12"
gepetuto = "^1.3.0"
crocoddyl = "^2.0.2"
matplotlib = "^3.8.2"
meshcat = "^0.3.2"
#quadprog = "^0.1.11"
scipy = "^1.11.4"
#tensorflow = "^2.13.0"
proxsuite = "^0.6.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
