[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supaero2025"
version = "0.1.0"
description = "Gepetto tutorials, for Pinocchio and Crocoddyl, version for Supaero 2025 class"
readme = "README.md"
authors = [
  { name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr"},
  { name = "Nicolas Mansard", email = "nmansard@laas.fr"},
  { name = "Théo Martinez", email = "tmartinezf@laas.fr"}
]
requires-python = ">=3.10"
dependencies = [
    "crocoddyl>=2.2.0",
    "gepetuto>=1.3.0",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "meshcat>=0.3.2",
    "proxsuite>=0.7.1",
    "scipy>=1.15.0",
]

[tool.isort]
profile = "black"
